hide overflow on section 2 to prevent collapsing margins. this closes #6

--- a/styles/less/custom.less
+++ b/styles/less/custom.less
@@ -305,6 +305,7 @@ background-size: 80% auto;
 }
 
 #section-2 {
+overflow: hidden;
 
 	h1 {
 	.make-sm-column(10);
